Create MxScollbar Component!

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "mx-scrollbar",
+  "name": "@maxicorrea/mx-scrollbar",
   "version": "1.0.0",
-  "description": "Made with create-react-library",
+  "description": "React MxScrollbar Component",
   "author": "MaxiCorrea",
   "license": "MIT",
-  "repository": "MaxiCorrea/mx-scrollbar",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MaxiCorrea/mx-scrollbar.git"
+  },
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.tsx",
@@ -24,9 +27,11 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.0.0",
+    "@material-ui/core": "^4.10.2"
   },
   "devDependencies": {
+    "@material-ui/core": "^4.10.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -56,6 +61,9 @@
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
     "typescript": "^3.7.5"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   },
   "files": [
     "dist"
